# thingsmith

./: LICENSE  Makefile  README.md  pyproject.toml
example/: drive_socket.py  wrench.py  wrench_socket.py
example/stl/: socket-organizer-METRIC[7-13]-drive[0.25]-type[DEEP,SIX_POINT].stl  wrench-organizer.stl
pyfinity/: wrench.py
pyfinity/_gridfinity/: __init__.py  block.py  organizer.py  profile.py  spec.py
pyfinity/_wrench/: __init__.py  _organizer.py  _profile.py  _wrench.py
pyfinity/drive_socket/: __init__.py  _organizer.py  _socket.py  _spec.py
pyfinity/socket/: __init__.py  _organizer.py  _socket.py
pyfinity/wrench/: __init__.py  _organizer.py  _wrench.py
tests/: test_socket_organizer.py
thingsmith/_gridfinity/: __init__.py  block.py  organizer.py  profile.py
thingsmith/drive_socket/: __init__.py  _organizer.py  _socket.py  _spec.py
thingsmith/wrench/: __init__.py  _organizer.py  _profile.py
