[project]
name = "pyfinity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "build123d>=0.9.0,<0.10",
]

[tool.pyright]
# see https://microsoft.github.io/pyright/#/configuration?id=pyright-configuration
include = ["pyfinity"]
exclude = ["**/node_modules", "**/__pycache__", "**/.venv"]
reportMissingImports = true
reportWildcardImportFromLibrary = false
reportUnusedImport = false
reportUndefinedVariable = false
typeCheckingMode = "basic"

[tool.ruff]
lint.fixable = ["ALL"]
lint.select = ["ALL"]
lint.ignore = [
  "D203",    # One blank line before class docstring
  "D212",    # Multi-line summary first line
  "PLR0913", # Too many arguments
  "Q000",    # Single quotes found but double quotes preferred

  "TD",
  "FIX",

  # comment related
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
]
line-length = 120
show-fixes = true
src = ["pyfinity"]
target-version = "py312"


[tool.ruff.lint.flake8-copyright]
author = "David Harrigan"


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"


[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.ruff.lint.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401", "F403", "F405"]
"tests/*" = ["ANN", "ARG", "INP001", "S101"]
"logger.py" = ["N815"]
"example/*" = ["T201"]


[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true

[dependency-groups]
dev = [
    "ocp-vscode>=2.7.1",
    "pytest>=8.3.5",
]
